--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary:#651017;
+$primary:#672F2F;
 $secondary: #8A91AC;
 $light: #F6FAFF;
 $dark: #031B4E;
